cabal-version:      3.8
name:               dev-server
version:            0.1.0.0

library
    exposed-modules:
        DevServer
    other-modules:
        DevServer.Client,
        DevServer.Logger,
        DevServer.Server
    build-depends:
        aeson,
        async,
        base,
        cabal-install-parsers,
        fast-logger,
        fsnotify,
        text,
        typed-process,
        utf8-string,
        websockets
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
        LambdaCase,
        OverloadedStrings,
        RecordWildCards

